--- a/studio3/index.html
+++ b/studio3/index.html
@@ -19,12 +19,11 @@
         <br>
         <p>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins.</p> 
         <p>Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p>
-        <button id="begin">| Begin Now |</button>
+        <button id="begin"> >> Begin Now &lt;&lt; </button>
     </header>
 
     <main id="play" class="hide">
         <div id="gamecontrol">
-            <button id="startgame">| Randomly Choose a Player to Begin |</button>
         </div>
 
         <div id="game"></div>
@@ -34,7 +33,9 @@
             <div id="player2">
             </div>
         </div>
-        <div id="actions"></div>
+        <div id="actions">
+            <button id="startgame"> >> Randomly Choose a Player to Begin &lt;&lt; </button>
+        </div>
     </main>
 </body>
 </html>
