final brief added and validated

--- a/final/brief.html
+++ b/final/brief.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Rampart+One&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Final Project Design Brief</title>
 </head>
 <body>
-    <header>Final Project Design Brief</header>
+    <header>
+        <h1>Final Project Design Brief</h1>
+    </header>
     <section>
-        1 sentence summary with project topic, form and intentions. State which Studio Project you are updating.
-    </section>
-    <section>
-        <p>Project Goals: Articulation your goals for your project.</p>
-        <p>Design Strategies: Articulate your plans for the overall look and feel (visual strategies, such as formal details including color and type). Use language that includes design elements, design principles and Gestalt.</p>
-        <p>Interaction Strategies: Articulate your plans for interactions, including time-based behaviors, visual and aural feedback, inputs, etc.</p>
-        <p>Experience Goals: Articulate your goals for intended/desired experiences for the users and how you plan to achieve them.</p>
+            <h2>My final project will be making my second studio project, Every Picture Project, more interactive and visually interesting.</h2>
+        
+        <article>
+            <h3>Project Goals</h3>
+                <p>My goal for this project is to refine my Every Picture project, where the only interaction is scrolling and the images entering and leaving through the right side of the screen so far. The refinements I will make include additional interactions with hovers, another page that takes the role of a home screen, and making the overall feeling more story-like. Another goal of my project is to give a "wow" moment to the users while they interact with my site. I will be changing how I represent my images and I also want to make the screen more interesting with small interactive parts in components like buttons and images.</p>
+        </article>
+        <article>
+            <h3>Design Strategies</h3>
+            <p>I believe the original design that I had has a straightforward hierarchy of information, but I do believe that all the sections are too synchronized which makes it more boring. Rather than making the website look like the Wikipedia of my life, I am thinking of making the structure more fun by adding different hues of background as well as experimenting with different typographies for different sections. The current project has great readability, but once again, it is not interesting enough to encourage users to keep scrolling. So, I believe that it would be more fun for the users to interact with it if I add additional features that reflect users' inputs into the screen.</p>
+        </article>
+        <article>
+            <h3>Interaction Strategies</h3>
+            <p>My plans for interactions are mostly on scrolls, but also have more buttons that the users could interact with. Also, I believe it would be more interesting if I add sounds on the buttons or different pages that indicate to the users that the website is actively engaging with the audience. I would prefer visual feedback and auditory feedback to match so the user would have more fun interacting with different features; for example, if the beach image is in the background then the audio would be the sound of waves or buttons that moves on to the next page would have a flip sound when pressed. </p>
+        </article>
+        <article>
+            <h3>Experience Goals</h3>
+            <p>My goals and desired experiences for the users are to enter with curiosity and exit with warm-hearted feelings. As I am working with some of the powerful emotions like love, care, and support, I would like to pass on that feelings to the users in a fun way. In order to achieve my goal, I believe that I should realize that my current target audience is whoever is in DES157A class and that they would like to see some movements and visual contrast from my project. So, as I mentioned above, I will be modifying the methods of how users would interact with my page and creating more visual contrast between different sections. </p>
+        </article>
     </section>
     
 </body>
