--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="secondBox">
             <h2>Research & Development</h2>
             <ul>
-                <li><a href="">Project Brief</a></li>
+                <li><a href="final/brief.html">Project Brief</a></li>
                 <li><a href="">Design Comp</a></li>
                 <li><a href="">Version 1</a></li>
                 <li><a href="">Version 2 (User Test)</a></li>
