--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Research & Development</h2>
             <ul>
                 <li><a href="final/brief.html">Project Brief</a></li>
-                <li><a href="">Design Comp</a></li>
+                <li><a href="final/images/comp.png">Design Comp</a></li>
                 <li><a href="">Version 1</a></li>
                 <li><a href="">Version 2 (User Test)</a></li>
                 <li><a href="">User Test Results</a></li>
