--- a/studio2/index.html
+++ b/studio2/index.html
@@ -15,11 +15,7 @@
     <title>Jennifer Every Picture</title>
 </head>
 <body>
-    <!-- <header id="landing" class="show">
-        <img src="images/sky.png" alt="Sky Image" width="800">
-        <button>View Jennifer's Letters Now</button>
-    </header> -->
-    <main id="letters" class="hide">
+    <main id="letters">
         <section id="part1">
             <article>
                 <h1>Sister</h1>
@@ -112,9 +108,6 @@
                 <p>
                     On my birthday, I received a package that my mom ordered from a floral shop. It had a clear vase, roses with other pink flowers, and this sticker letter. I was touched by her gift because I have not been able to celebrate my birthday with none of my family and this letter made me feel like my mom was with me on my birthday.
                 </p>
-                <!-- <br>
-                <br>
-                <button id="home">Go Back Home</button> -->
             </article>
         </section>
         <figure class="sect1">
