added user test results to correct button

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <li><a href="final/images/comp.png">Design Comp</a></li>
                 <li><a href="final/version1/index.html">Version 1</a></li>
                 <li><a href="final/version2/index.html">Version 2 (User Test)</a></li>
-                <li><a href="">User Test Results</a></li>
+                <li><a href="final/usertest.html">User Test Results</a></li>
             </ul>
         </section>
 
         <section id="thirdBox">
             <h2>Final</h2>
             <ul>
-                <li><a href="final/usertest.html">Final Project</a></li>
+                <li><a href="">Final Project</a></li>
             </ul>
         </section>
     </main>
