few revisions after final presentation

--- a/final/finalproject/index.html
+++ b/final/finalproject/index.html
@@ -9,7 +9,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;600&family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Julius+Sans+One&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Jennifer Every Picture</title>
@@ -27,12 +27,11 @@
             <img class="sisterLetter" src="images/sister.png" alt="sister letter">
         </div>
         <article id="sisterArticle">
-            <h1>Sister</h1>
+            <h1>Sister — 2013</h1>
             <h3>Setting</h3>
             <ul>
                 <li><b>Who</b>: My identical twin sister</li>
                 <li><b>What</b>: Apology letter</li>
-                <li><b>When</b>: Random recess in 2013</li>
                 <li><b>Where</b>: Elementary school in Korea</li>
                 <li><b>Why</b>: It was my sister's assignment to write an apology letter to anyone</li>
             </ul>
@@ -45,45 +44,43 @@
     </div>
 
     <div class="bg2">
-        <div id="grandma">
-            <img class="grandmaLetter" src="images/grandma.png" alt="grandma letter">
+        <div id="colorguard">
+            <img class="colorguardLetter" src="images/colorguard.png" alt="colorguard letter">
         </div>
-        <article id="grandmaArticle">
-            <h1>Grandma</h1>
+        <article id="colorguardArticle">
+            <h1>Colorguard – 2017</h1>
                 <h3>Setting</h3>
                 <ul>
-                    <li><b>Who</b>: My grandmother</li>
-                    <li><b>What</b>: Encouragement letter</li>
-                    <li><b>When</b>: 2019.8.18</li>
-                    <li><b>Where</b>: Seoul, Korea</li>
-                    <li><b>Why</b>: My sister and I were leaving Korea to go to high school in America</li>
+                    <li><b>Who</b>: Color guard members</li>
+                    <li><b>What</b>: Affirmation letter</li>
+                    <li><b>Where</b>: Diamond Bar, California</li>
+                    <li><b>Why</b>: It was a tradition for us to write an affirmation letter for each other before our  season began</li>
                 </ul>
                 <br>
                 <h3>Context</h3>
                 <p>
-                    My grandmother gave me this letter as we said good bye before I left to America. We all knew that we won't be seeing each other for a while so she wrote me a letter talking about how much she is proud of me and how excited she is for my future.
+                    After our last practice before our first competition of the season, my color guard team members wrote each other letter of affirmation to show that we appreciate each other for everything that we do during practice and performance, and also encourage each other for a great season.
                 </p>
         </article>
     </div>
 
     <div class="bg3">
-        <div id="colorguard">
-            <img class="colorguardLetter" src="images/colorguard.png" alt="colorguard letter">
+        <div id="grandma">
+            <img class="grandmaLetter" src="images/grandma.png" alt="grandma letter">
         </div>
-        <article id="colorguardArticle">
-            <h1>Colorguard</h1>
+        <article id="grandmaArticle">
+            <h1>Grandma – 2019</h1>
                 <h3>Setting</h3>
                 <ul>
-                    <li><b>Who</b>: Color guard members</li>
-                    <li><b>What</b>: Dedication letter</li>
-                    <li><b>When</b>: 2017 Before our first competition</li>
-                    <li><b>Where</b>: Diamond Bar, California</li>
-                    <li><b>Why</b>: It was a tradition for us to write dedication letters for each other before our  season began</li>
+                    <li><b>Who</b>: My grandmother</li>
+                    <li><b>What</b>: Encouragement letter</li>
+                    <li><b>Where</b>: Seoul, Korea</li>
+                    <li><b>Why</b>: My sister and I were graduating from high school</li>
                 </ul>
                 <br>
                 <h3>Context</h3>
                 <p>
-                    After our last practice before our first competition of the season, my color guard team members wrote each other letter of dedication to show that we appreciate each other for everything that we do during practice and performance, and also encourage each other for a great season.
+                    My grandmother gave me this letter as an encouragement letter as my sister and I graduated from high school. We visited Korea during the summer break after my high school graduation and she wrote about how she was proud of us since babies and that she trusts that we will do well in the future as well.
                 </p>
         </article>
     </div>
@@ -93,12 +90,11 @@
             <img class="bfLetter" src="images/bf.png" alt="bf letter">
         </div>
         <article id="bfArticle">
-            <h1>Boyfriend</h1>
+            <h1>Boyfriend – 2022</h1>
                 <h3>Setting</h3>
                 <ul>
                     <li><b>Who</b>: My boyfriend</li>
                     <li><b>What</b>: Love letter</li>
-                    <li><b>When</b>: 2nd year anniversary</li>
                     <li><b>Where</b>: Malibu, California</li>
                     <li><b>Why</b>: It was our 2nd year anniversary</li>
                 </ul>
@@ -115,12 +111,11 @@
             <img class="momLetter" src="images/mom.png" alt="mom letter">
         </div>
         <article id="momArticle">
-            <h1>Mom</h1>
+            <h1>Mom – 2022</h1>
                 <h3>Setting</h3>
                 <ul>
                     <li><b>Who</b>: My mom</li>
                     <li><b>What</b>: Congratulations  letter</li>
-                    <li><b>When</b>: 2022.2.17</li>
                     <li><b>Where</b>: From Korea to Davis</li>
                     <li><b>Why</b>: It was my birthday!</li>
                 </ul>
