--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="thirdBox">
             <h2>Final</h2>
             <ul>
-                <li><a href="">Final Project</a></li>
+                <li><a href="final/finalproject/index.html">Final Project</a></li>
             </ul>
         </section>
     </main>
